--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dota Heroes</title>
   <link rel="stylesheet" href="src/index.css">
+  <link rel="icon" href="/public/logo.png">
 </head>
 <body>
   <h1>Dota heroes project</h1>
