ADD: navbar and footer

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dota Heroes</title>
   <link rel="stylesheet" href="src/index.css">
-  <link rel="icon" href="/public/logo.png">
+  <link rel="icon" href="/logo.png">
 </head>
 <body>
-  <h1>Dota heroes project</h1>
-
+  <header class="navbar">
+    <a id="nav-item" class="nav-item">Inicio</a>
+    <a id="nav-item" class="nav-item">Heroes</a>
+    <a id="nav-item" class="nav-item">Jugadores</a>
+  </header>
+  <div id="app"></div>
+  <footer class="footer">
+    <p class="text-sm text-white font-semibold">© 2024. Todo los derechos reservados </p>
+  </footer>
   <script src="src/App.js" type="module"></script>
 </body>
 </html>
