ADD: app main logic

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <header class="navbar">
-    <a id="nav-item" class="nav-item">Inicio</a>
-    <a id="nav-item" class="nav-item">Heroes</a>
-    <a id="nav-item" class="nav-item">Jugadores</a>
+    <a id="nav-item" href="/" class="nav-item">Inicio</a>
+    <a id="nav-item" href="/heroes" class="nav-item">Heroes</a>
+    <a id="nav-item" href="/players" class="nav-item">Jugadores</a>
   </header>
   <div id="app"></div>
   <footer class="footer">
     <p class="text-sm text-white font-semibold">© 2024. Todo los derechos reservados </p>
   </footer>
-  <script src="src/App.js" type="module"></script>
+  <script src="/src/index.js" type="module"></script>
 </body>
 </html>
