ADD: on load event

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     <a id="nav-item" href="/heroes" class="nav-item">Heroes</a>
     <a id="nav-item" href="/players" class="nav-item">Jugadores</a>
   </header>
-  <div id="app"></div>
+  <div id="app" class="min-h-lvh flex items-center justify-center">
+    <div 
+      class="loader"
+      id="loader"
+    >
+      <p class="loader-text">Cargando...</p>
+      <img
+        id="img-loader"
+        alt="background-image"
+        class="loader-img"
+        src="/loader/pudge.png"
+      />
+    </div>
+  </div>
   <footer class="footer">
     <p class="text-sm text-white font-semibold">© 2024. Todo los derechos reservados </p>
   </footer>
