ADD: toggle button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,11 @@
     <a id="nav-item" href="/" class="nav-item">Inicio</a>
     <a id="nav-item" href="/heroes" class="nav-item">Heroes</a>
     <a id="nav-item" href="/players" class="nav-item">Jugadores</a>
+    <img
+      id="toggle-theme"
+      data-theme="light"
+      class="cursor-pointer w-7 h-7 object-cover absolute right-5"
+    />
   </header>
   <div id="app" class="min-h-lvh flex items-center justify-center">
     <div 
