FIX: remove class hidden when page is loaded

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <a id="nav-item" href="/players" class="nav-item">Jugadores</a>
     <img
       id="toggle-theme"
+      alt="theme"
+      src="/icons/dark.svg"
       data-theme="light"
-      class="cursor-pointer w-7 h-7 object-cover absolute right-5"
+      class="cursor-pointer w-7 h-7 object-cover absolute right-5 hidden"
     />
   </header>
   <div id="app" class="min-h-lvh flex items-center justify-center">
